site is now responsive down to 768px width (then horizontal scrollbar appears); to fix: weird stuff happens at header when window gets super narrow; fixed alignment issue with info box in event list/calendar

--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -57,14 +57,6 @@ h4 {
     vertical-align: middle;
 }
 
-.row-compact {
-    margin: 0px -8px;
-}
-
-.col-compact {
-    padding: 0px 8px;
-}
-
 /* Links - No Underline */
 a:hover, a:focus {
     outline: none;
@@ -172,6 +164,9 @@ form:not(#login-form) {
 }
 #event-list .date-header {
     padding-top: 20px;
+}
+#event-list ul {
+    padding-left: 40px;
 }
 #event-list li a {
     color: inherit;
